<resources>
    <string name="app_name">Bogy\'s Travels</string>
    <string name="logout">logout</string>
    <string name="revoke_access">revoke_access</string>
    <string name="welcome">welcome</string>
    <string name="read">Read</string>
    <string name="something_stupid">Something stupid</string>
    <string name="add">Add</string>
    <string name="select_a_city">Select a City</string>
    <string name="Africa">Africa</string>
    <string name="Europe">Europe</string>
    <string name="theWorld">the World</string>
    <string name="asia">Asia</string>
</resources>